vault/bsc/probes/static_local_dangling_borrow.expected.stderr
<probe>:10:25: error: defining mutable global variables is not allowed within the safe zone
    static int *_Borrow p = nullptr;   // 'static lifetime borrow slot
                        ^
1 error generated.
